--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,6 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -19,5 +18,6 @@
     "nodemailer": "^6.9.8",
     "nodemon": "^3.0.3",
     "twilio": "^4.21.0"
-  }
+  },
+  "description": ""
 }
