--- a/client/package.json
+++ b/client/package.json
@@ -7,8 +7,11 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.7",
+    "js-cookie": "^3.0.5",
     "react": "^18.2.0",
+    "react-cookie": "^7.0.2",
     "react-dom": "^18.2.0",
+    "react-phone-number-input": "^3.3.9",
     "react-router-dom": "^6.21.3",
     "react-scripts": "5.0.1",
     "switch": "^0.0.0",
