--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "react-phone-number-input": "^3.3.9",
     "react-router-dom": "^6.21.3",
     "react-scripts": "5.0.1",
+    "socket.io-client": "^4.7.4",
     "switch": "^0.0.0",
     "web-vitals": "^2.1.4"
   },
